At #424 Fix bug where Dashboard's Data Picker and Create Template Variable pop-ups overlap

--- a/frontend/src/style/theme/_form-elements.scss
+++ b/frontend/src/style/theme/_form-elements.scss
@@ -218,6 +218,9 @@ textarea.form-control {
 .form-group > .btn {
   display: inline-block;
 }
+.form-group.form-group-type {
+  z-index: 50001;
+}
 .form-group > label,
 label.form-label {
   width: 100%;
